--- a/style.sass
+++ b/style.sass
@@ -228,19 +228,19 @@ header, .navbar
   transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12)
   padding: 20px 30px 30px 20px
 
-#card-desenvolvedores:hover
+.card-desenvolvedores:hover
   background: rgb(0, 119, 255)
   transform: scale(1.05)
   box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06)
   cursor: pointer
 
-#card-container, #amanda,#ezequiel,#jairon,#sofia
+#card-container, #amanda, #ezequiel, #jairon, #sofia
   position: relative
   top: 50px
   width: 100%
   height: 75%
 
-#card-container h1, #amanda h1,#ezequiel h1,#jairon h1,#sofia h1
+#card-container h1, #amanda h1, #ezequiel h1, #jairon h1, #sofia h1
   padding-bottom: 25px
 
 
@@ -253,17 +253,21 @@ header, .navbar
         bottom: 200px
         top: 30px
 
-#team-heading,#team-area
+#team-heading, #team-area
   margin-bottom: 50px
   font-size: 50px
   color: rgb(0, 0, 0)
 
-#amanda,#ezequiel,#jairon,#sofia
+#amanda, #ezequiel, #jairon, #sofia
   padding: 50px
   padding-bottom: 70px
   background-color: rebeccapurple
   margin-top: 200px
   box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0, 0, 0, 0.295)
+
+.img-fluid
+  height: 100%
+  width: 100%
 
 .facebook, .instagram, .email, .github 
   width: 25px
@@ -348,14 +352,14 @@ header, .navbar
   height: 100%
 
 .grafico
-  width:200px
-  height:150px
+  width: 200px
+  height: 150px
 
 /* Footer */
 
 #contact-area-index, #copy-area-index
     position: relative
-    top: 1100px
+    top: 1380px
     text:
         align: center
 
@@ -365,15 +369,15 @@ header, .navbar
     text:
         align: center
 
-#contact-area-desenvolvedores, #copy-area-desenvolvedores
+#contact-area-des, #copy-area-des
     position: relative
-    top: 3400px
+    top: 3100px
     text:
         align: center
 
 #contact-area-pom, #copy-area-pom
     position: relative
-    top: 500px
+    top: 0px
     text:
         align: center
 
@@ -383,12 +387,6 @@ header, .navbar
     text:
         align: center
     z-index: -1
-
-#contact-area-des, #copy-area-des
-    position: relative
-    top: 3200px
-    text:
-        align: center
 
 .contact-box
     padding:
@@ -457,7 +455,7 @@ footer
 
 /* Copy-area */
 
-#copy-area-index, #copy-area-login, #copy-area-desenvolvedores, #copy-area-atv, #copy-area-pom, #copy-area-criar_atv, #copy-area-des
+#copy-area-index, #copy-area-login, #copy-area-atv, #copy-area-pom, #copy-area-criar_atv, #copy-area-des
     .container
         padding: 10px 0
         text-align: center
