--- a/starfocus/templates/desenvolvedores/desenvolvedores.htm
+++ b/starfocus/templates/desenvolvedores/desenvolvedores.htm
@@ -1,44 +1,16 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/STARFOCUS-logo.ico">
+{% extends "template.htm" %}
+{% load static %}
 
-    <title>Desenvolvedores | S.T.A.R.F.O.C.U.S.</title>
-</head>
-<body>
-  <header>
-    <div class = "container" id = 'nav-container'>
-        <nav class = "navbar navbar-expand-lg fixed-top">
-            <a href="#">
-                <img id = "logo" src="img/logotipo.png" alt = "logotipo">
-            </a> 
-            
-            <div class="navbar-text">
-                <h3 id="sigla">S.T.A.R.F.O.C.U.S.</h3> 
-                <h6 id="titulo-comp">Sistema de Trabalho, Agenda e Rotina Focada e Organizada Contido em um Único Site</h6>
-            </div>
-            
-        <button class = "navbar-toggler" type="button" data-toggle = "collapse" data-target = "#navbar-links" aria-controls = "navbar-links" aria-expanded="false" aria-label = "Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
-            <div class="navbar-nav">
-              <a class="nav-item nav-link" id="home-menu" href="index.html">Home</a>
-              <a class="nav-item nav-link" id="services-menu" href="servicos_atv.html">Serviços</a>
-              <a class="nav-item nav-link" id="team-menu" href="desenvolvedores.htm">Desenvolvedores</a>
-              <a class="nav-item nav-link" id="portfolio-menu" href="login.htm">Login</a>
-            </div>
-          </div>
-        </nav>
-    </div>
-  </header>
+{% block cabecalho %}
+	<title>Login | S.T.A.R.F.O.C.U.S.</title>
+{% endblock %}
+{% block estilo %}
+  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+{% endblock %}
+    
 
-
-    <div id="team-area">
+{% block conteudo %}
+	<div id="team-area">
       <div class="container" id="card-container">
         <div class = "row">
 
@@ -196,54 +168,4 @@
         </div>
       </div>
     </div>
-
-    <!-- Footer -->
-
-    <footer>
-      <div id="contact-area-des">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <h3 class="main-title footer-title">Entre em contato conosco</h3>
-            </div>
-            <div class="col-md-4 contact-box">
-              <i class="bi bi-github"></i>
-              <p><span class="contact-title">Nos siga:</span> <a href="https://github.com/JaironHenrique/app-de-gerenciamento" id="git_starfocus" target="blank">STAR FOCUS</a></p>
-            </div>
-            <div class="col-md-4 contact-box">
-              <i class="bi bi-envelope-fill"></i>
-              <p><span class="contact-title">Envie um e-mail:</span> <e-mail>contato.star.focus@gmail.com</e-mail></p>
-            </div>
-            <div class="col-md-4 contact-box">
-              <i class="bi bi-instagram"></i>
-              <p><span class="contact-title">Envie uma direct:</span> @star.focus</p>
-            </div>
-            <div class="col-md-6" id="msg-box">
-              <p>Nos deixe uma mensagem:</p>
-            </div>
-            <div class="col-md-6" id="contact-form">
-              <form action="#">
-                <input type="email" class="form-control" placeholder="E-mail" name="email">
-                <input type="email" class="form-control" placeholder="Assunto" name="subject">
-                <textarea class="form-control" rows="3" placeholder="Sua mensagem" name="message"></textarea>
-                <input type="submit" class="main-btn" value="Enviar">
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div id="copy-area-des">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <p>Desenvolvido por <a href="index.html" target="_blank">S.T.A.R.F.O.C.U.S</a> &copy; 2021</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <a href="#" class="botao-top"><i class="bi bi-arrow-up"></i></a>
-</body>
-</html>
+{% endblock %}
