--- a/starfocus/templates/login/criar_conta.htm
+++ b/starfocus/templates/login/criar_conta.htm
@@ -28,7 +28,7 @@
                         <input type="password" placeholder="Confirmar" class="form-control"/>
                     </div>
                     <div>
-                        <a class="btn btn-success btn-block_conta" href="login.htm" role="button">Finalizar</a> 
+                        <a class="btn btn-success btn-block_conta" href="{% url 'login' %}" role="button">Finalizar</a> 
                     </div>
                 </form>
             </div>
