--- a/starfocus/templates/login/login.htm
+++ b/starfocus/templates/login/login.htm
@@ -24,8 +24,8 @@
                         <input type="password" placeholder="Informe sua senha" class="form-control"/>
                     </div>
                     <div>
-                        <a class="btn btn-primary btn-block" href="criar_conta.htm" role="button">Criar conta</a>
-                        <a class="btn btn-success btn-block" href="servicos_atv.html" role="button">Logar no sistema</a> 
+                        <a class="btn btn-primary btn-block" href="{% url 'criar_conta' %}" role="button">Criar conta</a>
+                        <a class="btn btn-success btn-block" href="{% url 'servicos' %}" role="button">Logar no sistema</a> 
                     </div>
                 </form>
             </div>
