--- a/starfocus/templates/rodape.htm
+++ b/starfocus/templates/rodape.htm
@@ -1,3 +1,5 @@
+{% load static %}
+
 <footer>
     <div id="contact-area-index">
     <div class="container">
@@ -36,7 +38,7 @@
     <div class="container">
         <div class="row">
         <div class="col-md-12">
-            <p>Desenvolvido por <a href="index.html" target="_blank">S.T.A.R.F.O.C.U.S</a> &copy; 2021</p>
+            <p>Desenvolvido por <a href="{% url 'index' %}" target="_blank">S.T.A.R.F.O.C.U.S</a> &copy; 2021</p>
         </div>
         </div>
     </div>
