--- a/starfocus/templates/servicos/servicos_atv.htm
+++ b/starfocus/templates/servicos/servicos_atv.htm
@@ -18,10 +18,10 @@
                 <a class="nav-link active" href="#" id="aba1-ativa">Minhas atividades</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="servicos_pomodoro.html" id="aba2">Pomodoro</a>
+                <a class="nav-link" href="{% url 'pomodoro' %}" id="aba2">Pomodoro</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="servicos_desempenho.html" id="aba3">Desempenho</a>
+                <a class="nav-link" href="{% url 'desempenho' %}" id="aba3">Desempenho</a>
                 </li>
             </ul>
             </div>
@@ -45,7 +45,7 @@
                   <i class="bi-star-fill" role="img" ></i>
                   <a href="" class="btn btn-primary">Adicionar estrela</a>
                   <a href="" class="btn btn-primary">Remover estrela</a></p>
-              <a href="criar_atv.html" class="btn btn-primary">Nova atividade</a>
+              <a href="{% url 'criar_atv' %}" class="btn btn-primary">Nova atividade</a>
               </div>
         </div>
     </div>
