Correção de bugs

--- a/starfocus/templates/index.htm
+++ b/starfocus/templates/index.htm
@@ -58,7 +58,7 @@
               <div class="carousel-item">
                 <img src="{% static 'img/banner_pomodoro.jpg' %}" class="d-block w-100" alt="Pomodoro">
                 <div class="carousel-caption d-md-block">
-                    <h2>Quer conhecer o melhor método de foco?</h2>
+                    <h2>Quer ter um foco maior?</h2>
                     <p>Use o método pomodoro.</p>
                     <a href="{% url 'login' %}" class="main-btn">Fazer login</a>
                 </div>
