Atualizei pag de servicos

--- a/starfocus/static/style.css
+++ b/starfocus/static/style.css
@@ -382,7 +382,7 @@ header, .navbar {
   border-color: rgba(63, 32, 95, 0.5);
 }
 
-.card-text, #aba1, #aba2, #aba3, #aba1-ativa, #aba2-ativa, #aba3-ativa {
+.card-text, #aba1, #aba2, #aba3, #aba4, #aba5, #aba1-ativa, #aba2-ativa, #aba3-ativa {
   color: #FFF;
 }
 
