--- a/starfocus/templates/servicos/servicos_atv.htm
+++ b/starfocus/templates/servicos/servicos_atv.htm
@@ -23,6 +23,12 @@
                 <li class="nav-item">
                 <a class="nav-link" href="{% url 'desempenho' %}" id="aba3">Desempenho</a>
                 </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'top_user' 10 %}" id="aba4">Melhores usuários</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'produtividade' %}" id="aba5">Produtividade dos usuários</a>
+                </li>
             </ul>
             </div>
             <div class="card-body">
