--- a/starfocus/templates/semana/index.html
+++ b/starfocus/templates/semana/index.html
@@ -27,10 +27,13 @@
                 <a class="nav-link" href="{% url 'top_user' 10 %}" id="aba4">Top pessoas produtivas</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="#" id="aba5">Produtividade dos usuários</a>
+                <a class="nav-link" href="{% url 'produtividade' %}" id="aba5">Produtividade dos usuários</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="#" id="aba6-ativa">Desempenho semanal</a>
+                <a class="nav-link" href="{% url 'visualizacao' %}" id="aba6">Desempenho por atividade</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link active" href="#" id="aba7-ativa">Desempenho por dia da semana</a>
                 </li>
             </ul>
             </div>
