--- a/starfocus/templates/desempenho_atividades/index.html
+++ b/starfocus/templates/desempenho_atividades/index.html
@@ -21,10 +21,19 @@
                 <a class="nav-link" href="{% url 'pomodoro' %}" id="aba2">Pomodoro</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'desempenho' %}" id="aba3">Desempenho</a>
+                <a class="nav-link" href="{% url 'desempenho' %}" id="aba3">Desempenho</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link active" href="#" id="aba3-ativa">Desempenho por atividade</a>
+                <a class="nav-link" href="{% url 'top_user' 10 %}" id="aba4">Top pessoas produtivas</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'produtividade' %}" id="aba5">Produtividade dos usuários</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link active" href="#" id="aba6-ativa">Desempenho por atividade</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'dias' %}" id="aba7">Desempenho por dia da semana</a>
                 </li>
             </ul>
             </div>
