--- a/starfocus/templates/produtividade_tempo_templates/index.html
+++ b/starfocus/templates/produtividade_tempo_templates/index.html
@@ -29,6 +29,12 @@
                 <li class="nav-item">
                 <a class="nav-link active" href="#" id="aba5-ativa">Produtividade dos usuários</a>
                 </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'visualizacao' %}" id="aba6">Desempenho por atividade</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'dias' %}" id="aba7">Desempenho por dia da semana</a>
+                </li>
             </ul>
             </div>
             <div class="card-body">
