--- a/starfocus/templates/servicos/servicos_pomodoro.htm
+++ b/starfocus/templates/servicos/servicos_pomodoro.htm
@@ -21,13 +21,10 @@
                 <a class="nav-link active" href="#" id="aba2-ativa">Pomodoro</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="{% url 'desempenho' %}" id="aba3">Desempenho</a>
-                </li>
-                <li class="nav-item">
                 <a class="nav-link" href="{% url 'top_user' 10 %}" id="aba4">Top pessoas produtivas</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="{% url 'produtividade' %}" id="aba5">Produtividade dos usuários</a>
+                <a class="nav-link" href="{% url 'produtividade' %}" id="aba5">Sua produtividade</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="{% url 'visualizacao' %}" id="aba6">Desempenho por atividade</a>
