--- a/starfocus/templates/desempenho_atividades/index.html
+++ b/starfocus/templates/desempenho_atividades/index.html
@@ -21,13 +21,10 @@
                 <a class="nav-link" href="{% url 'pomodoro' %}" id="aba2">Pomodoro</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="{% url 'desempenho' %}" id="aba3">Desempenho</a>
-                </li>
-                <li class="nav-item">
                 <a class="nav-link" href="{% url 'top_user' 10 %}" id="aba4">Top pessoas produtivas</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="{% url 'produtividade' %}" id="aba5">Produtividade dos usuários</a>
+                <a class="nav-link" href="{% url 'produtividade' %}" id="aba5">Sua produtividade</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link active" href="#" id="aba6-ativa">Desempenho por atividade</a>
@@ -46,4 +43,51 @@
             </div>
         </div>
     </div>
+
+    {% block rodape%}
+    <footer>
+    <div id="contact-area-pdt">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h3 class="main-title footer-title">Entre em contato conosco</h3>
+            </div>
+            <div class="col-md-4 contact-box">
+              <i class="bi bi-github"></i>
+              <p><span class="contact-title">Nos siga:</span> <a href="https://github.com/JaironHenrique/app-de-gerenciamento" id="git_starfocus" target="blank">STAR FOCUS</a></p>
+            </div>
+            <div class="col-md-4 contact-box">
+              <i class="bi bi-envelope-fill"></i>
+              <p><span class="contact-title">Envie um e-mail:</span> <e-mail>contato.star.focus@gmail.com</e-mail></p>
+            </div>
+            <div class="col-md-4 contact-box">
+              <i class="bi bi-instagram"></i>
+              <p><span class="contact-title">Envie uma direct:</span> @star.focus</p>
+            </div>
+            <div class="col-md-6" id="msg-box">
+              <p>Nos deixe uma mensagem:</p>
+            </div>
+            <div class="col-md-6" id="contact-form">
+              <form action="#">
+                <input type="email" class="form-control" placeholder="E-mail" name="email">
+                <input type="email" class="form-control" placeholder="Assunto" name="subject">
+                <textarea class="form-control" rows="3" placeholder="Sua mensagem" name="message"></textarea>
+                <input type="submit" class="main-btn" value="Enviar">
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="copy-area-pdt">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <p>Desenvolvido por <a href="index.html" target="_blank">S.T.A.R.F.O.C.U.S</a> &copy; 2021</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    {%endblock%}
 {% endblock %}
