--- a/starfocus/templates/top/index.html
+++ b/starfocus/templates/top/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="card-body">
                 {% for linha in mostrar %}
-                    {{linha}} <br/>
+                    {{linha|upper}} <br/>
                 {% endfor %}
             </div>
         </div>
