--- a/starfocus/templates/produtividade_tempo_templates/index.html
+++ b/starfocus/templates/produtividade_tempo_templates/index.html
@@ -35,6 +35,10 @@
             </ul>
             </div>
             <div class="card-body">
+              <h3>Como foi seu desempenho ao longo do mês?</h3>
+              <h3>Sua produtividade cresceu, diminuiu ou permaneceu constante neste período?</h3>
+              <h4>✨ Dezembro - 2021 ✨</h4>
+              <br>
                 {% autoescape off %}
                     {{ plot_div }}
                 {% endautoescape %}
