--- a/starfocus/templates/semana/index.html
+++ b/starfocus/templates/semana/index.html
@@ -35,6 +35,9 @@
             </ul>
             </div>
             <div class="card-body">
+              <h3>Em quais dias da semana você foi mais (ou menos) produtivo este mês?</h3>
+              <h4>✨ Dezembro - 2021 ✨</h4>
+              <br>
                 {% autoescape off %}
                     {{ plot_div }}
                 {% endautoescape %}
